# annotations

./: .gitignore  IMPROVEMENTS_LOG.md  KATE_COMPATIBILITY.md  LICENSE  Makefile  README.md  REPORT.md  SPEC.md  VERSIONS.md  com.github.eochis23.annotations.json  com.github.eochis23.annotations.json~  compile_target.local.example  compile_target.sh  compile_target_chroot_git.sh  extension.js  host-tools.ini  install.sh  install_second_partition.sh  meson.build  metadata.json  prefs.js  prompt_log.md  stylesheet.css  window-following-changes.md  window-following-review.md
.cursor/: partition-boot-debug-report.txt
annotations-shell-extension/: extension.js  kateTracker.js  metadata.json  stylesheet.css
archive/: README.md
archive/legacy/: README.md
archive/shell-extension/: Makefile  README.md  extension.js  meson.build  stylesheet.css
data/: com.github.eochis23.annotations.desktop.in  com.github.eochis23.annotations.gschema.xml  com.github.eochis23.annotations.service.in  meson.build
data/icons/: meson.build
docs/: PACKAGING-ROLLBACK.md  SCROLL_SYNC.md  VALIDATION.md  content-movement-spike.md  input-trace.md  packaging-ego-native.md  shell-extension-input.md  shell-integration.md
docs/extension/: README.md  packaging-ego-native.md
gnome-shell/: .gitlab-ci.yml  NEWS  meson.build
gnome-shell-main/.gitlab-ci/: build-toolbox-image.sh
gnome-shell-main/po/: ca.po  es.po  ko.po  ro.po  sk.po  sr.po
gnome-shell-main/src/: gtkactionmuxer.c  shell-app-cache.c  shell-global.c  (+6 more)
legacy/: README.md
legacy/gtk-application/src/: annotations-window.c  meson.build
lib/: annoDebug.js  devices.js  motionClient.js  motionSync.js  overlaySession.js  strokes.js
mutter/: ANNOTATION_MUTTER_CHANGES.md
mutter-fork/: .gitignore  README.md
native/: anno-motion.c  meson.build  test-scroll.py
patches/: 0001-mutter-annotation-fork-pointer-hook.patch  0002-gnome-shell-plugin-annotation-fork-init.patch
po/: POTFILES.in
schemas/: gschemas.compiled  org.gnome.shell.extensions.annotations.gschema.xml
scripts/: ANNOTATION_INPUT.md  annotations-git-url.sh  apply-patches.sh  chroot-build-requirements.txt  clone-sources.sh  collect_partition_boot_debug.sh  diagnose-pen-cursor.sh  install-annotation-extension-chroot.sh  install-kate-runtime-chroot.sh  list-mutter-makedepends.sh  rename_boot_menu_entries.sh  verify-mutter-install.sh
src/: annotations-application.c  annotations-application.h  annotations-window.c  annotations-window.ui  annotations.gresource.xml  main.c  meson.build
(+98 files in other folders)
