# SPDX-License-Identifier: MIT
# Stub only: the GNOME Shell extension is not built with Meson.
# - Native ROI helper: `cd native && meson setup build && meson compile -C build`
# - Legacy GTK app: `cd legacy/gtk-application && meson setup build && meson compile -C build`

project(
  'annotations-workspace',
  'c',
  version: '0.1.0',
  meson_version: '>= 1.0.0',
  default_options: ['warning_level=0'],
)

message(
  'Root Meson is a stub. Use Makefile / native/ / legacy/gtk-application/ for builds.',
)
